--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
     <title>Arcadian Lab</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <meta name="description" content="Mobile games developer."/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <meta property="og:title" content="Arcadian Lab" />
     <meta property="og:site_name" content="Arcadian Lab" />
@@ -14,9 +19,8 @@
     <meta property="og:image" content="/static/img/arcadianlab_logo.png" />
 
     <style>
-
         a, a:focus, a:hover {
-            color: rgb(129, 129, 129);
+            color: rgb(130, 130, 130);
         }
 
         html,
@@ -37,8 +41,6 @@
         .cover {
             padding: 0 1.5rem;
         }
-
-
     </style>
 </head>
 <body class="text-center">
