Change background color to black, foreground to white

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
 
     <style>
         a, a:focus, a:hover {
-            color: rgb(130, 130, 130);
+            color: #fff;
         }
 
         html,
         body {
             height: 100%;
-            background-color: #fff;
+            background-color: #000;
         }
 
         body {
+            color: #fff;
             display: -ms-flexbox;
             display: flex;
         }
