--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <img src="/static/arcadianlab.svg" class="mb-5">
         <p class="lead mb-4">Mobile games developer</p>
 
-        <a target="_blank" href="https://apps.apple.com/us/developer/arcadian-lab/id1403244072#see-all/i-phonei-pad-apps" style="border: none"><img width="150" style="margin: 10px 10px" src="/static/img/store_ios.png"></a>
-        <!-- <a target="_blank" href="https://play.google.com/store/apps/developer?id=Arcadian+Lab&hl=en" style="border: none"><img width="150"  style="margin: 0 10px" src="/static/img/store_android.png"></a> -->
+        <a target="_blank" href="https://apps.apple.com/us/developer/arcadian-lab/id1403244072#see-all/i-phonei-pad-apps" style="border: none"><img width="150" style="margin: 10px 10px" src="/static/img/store_ios.svg"></a>
+        <!-- <a target="_blank" href="https://play.google.com/store/apps/developer?id=Arcadian+Lab&hl=en" style="border: none"><img width="150"  style="margin: 0 10px" src="/static/img/store_android.svg"></a> -->
 
         <p class="mt-4">Contact us via <a href="mailto:info@arcadianlab.com">info@arcadianlab.com</a></p>
 
