Update hiring URL

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>We are <a href="https://www.linkedin.com/jobs/search/?geoId=104112529&keywords=Arcadian%20Lab&location=Lahore%2C%20Punjab%2C%20Pakistan" target="_blank">hiring</a> 🤗</p>
+            <p>We are <a href="https://www.linkedin.com/jobs/search/?keywords=Arcadian%20Lab&location=Pakistan" target="_blank">hiring</a> 🤗</p>
         </div>
     </footer>
 </div>
