Update og:url to https://arcadianlab.com/

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Arcadian Lab" />
     <meta property="og:site_name" content="Arcadian Lab" />
     <meta property="og:description" content="Mobile games developer" />
-    <meta property="og:url" content="https://www.arcadianlab.com/" />
+    <meta property="og:url" content="https://arcadianlab.com/" />
     <meta property="og:image" content="/static/img/arcadianlab_logo.png" />
 
     <style>
